--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="contact-content">
         <h2><b>Get Me</b></h2>
         <p class="mail">
-          To reach out to me <i class="fas fa-arrow-right"></i> johnypani111@gmail.com
+          To reach out to me <i class="fas fa-arrow-right"></i> johnytpani@gmail.com
         </p>
         <p class="links">my socials:</p>
         <a href="https://www.linkedin.com/in/johny-thomas-749806274/" target="blank"><i class="fab fa-linkedin">
